# src/shared/infra/http/routes/cars.routes.ts
@@ -1,22 +1,31 @@
 import { Router } from "express";
 
 import { CreateCarController } from "@modules/cars/useCases/createCar/CreateCarController";
+import { CreateCarSpecificationController } from "@modules/cars/useCases/createCarSpecification/CreateCarSpecificationController";
+import { ListAvailableCarsController } from "@modules/cars/useCases/listAvailableCars/ListAvailableCarsController";
+
 import { ensureAutenticated } from "../middlewares/ensureAuthentitcated";
 import { ensureAdmin } from "../middlewares/ensureAdmin";
-import { ListAvailableCarsController } from "@modules/cars/useCases/listAvailableCars/ListAvailableCarsController";
 
 const carsRoutes = Router();
 
 const createCarController = new CreateCarController();
 const listAvailableCarsController = new ListAvailableCarsController();
+const createCarSpecificationController = new CreateCarSpecificationController();
 
 carsRoutes.post("/",
     ensureAutenticated,
     ensureAdmin,
-    createCarController.handle
- 
+    createCarController.handle,
 );
 
 carsRoutes.get("/available", listAvailableCarsController.handle);
+
+carsRoutes.post(
+    "/specifications/:id",
+    ensureAutenticated,
+    ensureAdmin,
+    createCarSpecificationController.handle
+);
 
 export { carsRoutes };
